# self-balance-vehicle

./: .gitignore  README.md
.cursor/rules/: comment-style.mdc  markdown-recheck.mdc  markdown-writing.mdc
docs/: ROADMAP.md
docs/hardware/: esp32-board.md  gb37-520-dc-motor.md  robot-mechanics.md  xy-160d-motor-driver.md
docs/setup/: install-esp-idf.md
docs/theory/: README.md  Untitled  angle-estimation.md  balance-controller.md  inverted-pendulum.md  loop-rates.md  motor-identification.md  pi-discretization.md  pi-tuning.md  wheel-speed-controller.md
experiments/angle_estimation/: angle_estimation_plots.m
experiments/balance_controller/: README.md  balance_controller_plots.m
experiments/closed-loop_identify/: README.md  closed_loop_id.m  input_whell_pi.csv  motors_20260718_033409.csv  motors_20260719_034838.csv
experiments/inverted_pendulum/: README.md  inverted_pendulum_plots.m
experiments/loop_rates/: README.md  loop_rate_plots.m
experiments/motor_tuning/: README.md  pi_tuning_analysis.m
experiments/motors_identify/: README.md  input.csv  motor_id.m  motors_20260703_005700.csv  motors_20260704_030928.csv  motors_20260707_011536.csv  motors_20260710_013313.csv
experiments/pi_discretization/: README.md  discretization_plots.m
experiments/robot_mechanics/: README.md  (+1 more)
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  balance_pid.c  balance_pid.h  control.c  control.h  encoders.c  encoders.h  estimator.c  estimator.h  imu.c  imu.h  led.c  led.h  motors.c  motors.h  telemetry.c  telemetry.h  web_server.c  web_server.h  wheel_pi.c  wheel_pi.h  wifi_ap.c  wifi_ap.h
firmware/main/www/: index.html
simulation/: MAPPING.md  README.md  balance_pid_sim.m  com_height_study.m  eom_derive.m  linearize.m  lqr_design.m  lqr_gain.m  params.m  plant_dynamics.m  sim_cascade.m  sim_closedloop_pid.m  sim_discrete.m  sim_openloop.m  tune_cascade.m  wheel_pi_sim.m
webapp/: README.md  index.html
(+15 files in other folders)
